--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html-wrapper">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.typekit.net/lrl1xfp.css">
   <script src="dist/main.js"></script>
+  <script>
+    function toggleMenu() {
+      var element = document.getElementById("primary-navigation");
+      var element2 = document.getElementById("html-wrapper");
+      element.classList.toggle('active');
+      element2.classList.toggle('no-scroll')
+    }
+  </script>
   <title>Home | RePAIR</title>
 </head>
 <body>
@@ -35,7 +43,7 @@
           Cart
         </a></li>
       </ul>
-      <button class="menu-toggle" type="button" data-toggle="collapse" data-target="" aria-controls="" aria-expanded="false" aria-label="Toggle Navigation">
+      <button id="main-menu-toggle" class="menu-toggle" type="button" data-target="#primary-navigation" aria-controls="" aria-expanded="false" aria-label="Toggle Navigation" onclick="toggleMenu()">
         Menu
         <span></span>
         <span></span>
@@ -43,17 +51,50 @@
       </button>
     </div>
   </header>
+  <nav id="primary-navigation">
+    <div class="container">
+      <ul class="main">
+        <li><a href="#">The Whey</a></li>
+        <li><a href="#">The Supplement</a></li>
+        <li><a href="#">The Boost</a></li>
+        <li><a href="#">The Pre-Drink</a></li>
+        <li><a href="#">View all</a></li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <ul class="secondary">
+        <li><a href="#">
+          <svg viewBox="0 0 20 16">
+            <path class="cls-2" d="M20,12v.5a.5.5,0,0,1-.5.5H18a3,3,0,0,1-6,0H8a3,3,0,0,1-6,0H1.75A1.75,1.75,0,0,1,0,11.25V1.75A1.75,1.75,0,0,1,1.75,0h9.5A1.75,1.75,0,0,1,13,1.75V3h1.13a2.27,2.27,0,0,1,1.59.66l2.62,2.62A2.27,2.27,0,0,1,19,7.87V11.5h.5A.5.5,0,0,1,20,12ZM11.5,1.75a.25.25,0,0,0-.25-.25H1.75a.25.25,0,0,0-.25.25v9.5a.25.25,0,0,0,.25.25h.67a3,3,0,0,1,5.16,0H11.5ZM6.5,13A1.5,1.5,0,1,0,5,14.5,1.5,1.5,0,0,0,6.5,13ZM13,7h3.94L14.66,4.72a.75.75,0,0,0-.53-.22H13Zm4.5,1.5H13v2.28A3,3,0,0,1,15,10a3,3,0,0,1,2.5,1.35Zm-1,4.5A1.5,1.5,0,1,0,15,14.5,1.5,1.5,0,0,0,16.5,13Z"/>
+          </svg>
+          Free next day delivery
+        </a></li>
+        <li><a href="#">
+          <svg viewBox="0 0 12 16">
+            <path class="cls-2" d="M12,6c0,2.22-.75,2.91-4.73,9.29a1.49,1.49,0,0,1-2.54,0C.75,8.92,0,8.22,0,6A6,6,0,0,1,12,6ZM10.5,6a4.5,4.5,0,0,0-9,0C1.5,7.71,2,8.12,6,14.5,10,8,10.5,7.71,10.5,6ZM6,3.5A2.5,2.5,0,1,1,3.5,6,2.5,2.5,0,0,1,6,3.5Z"/>
+          </svg>
+          Manufactured in the UK
+        </a></li>
+        <li><a href="#">
+          <svg viewBox="0 0 16 16">
+            <path class="cls-2" d="M16,15.62a.38.38,0,0,1-.38.38H.38A.38.38,0,0,1,0,15.62,1.12,1.12,0,0,1,1.12,14.5H9.75A4.24,4.24,0,0,0,10,6V9.21a1.54,1.54,0,0,1-1.08,1.47v1.18A1.14,1.14,0,0,1,7.78,13H5.22a1.14,1.14,0,0,1-1.14-1.14V10.68A1.54,1.54,0,0,1,3,9.21V3A1.53,1.53,0,0,1,3.79,1.7V1.14A1.14,1.14,0,0,1,4.93,0H8.07A1.14,1.14,0,0,1,9.21,1.14V1.7A1.53,1.53,0,0,1,10,3V4.51a5.74,5.74,0,0,1,3.61,10h1.27A1.12,1.12,0,0,1,16,15.62ZM8.5,3H7.75l0-1.5H5.29V3H4.54l0,6.21,0,0H8.46ZM7.42,11.5V10.25H5.58V11.5Z"/>
+          </svg>
+          CPB Compliant
+        </a></li>
+      </ul>
+    </div>
+  </nav>
   <section class="hero-section">
     <div class="container">
       <div class="col col-1">
         <div class="content">
           <h2>Welcome back, Tom <br/>Looking for <span>the usual?</span></h2>
-          <a href="#" class="btn">Shop now</a>
+          <a href="#" class="btn"><span>Shop Now</span></a>
         </div>
       </div>
       <div class="col col-2">
         <img src="./src/images/the-whey/repair-whey.png" alt="Repair - The Whey">
-        <a href="#" class="btn">Shop now</a>
+        <a href="#" class="btn"><span>Shop Now</span></a>
         <div class="triangle blue">
           <svg viewBox="0 0 375 284.88">
             <polygon class="cls-1" points="375 167 184.94 0 0 162.5 0 284.88 375 284.88 375 167"/>
@@ -73,12 +114,12 @@
         <div class="content">
           <h2>Looking for <br/> a quick boost?!</h2>
           <p>Everything you need in one place!</p>
-          <a href="#" class="btn">The Supplement</a>
+          <a href="#" class="btn"><span>The Supplement</span></a>
         </div>
       </div>
       <div class="col col-2">
         <img src="./src/images/the-supplement/supplements-angle.png" alt="Repair - The Supplement">
-        <a href="#" class="btn">The Supplement</a>
+        <a href="#" class="btn"><span>The Supplement</span></a>
       </div>
     </div>
   </section>
@@ -139,15 +180,19 @@
               </a></li>
             </ul>
             <a href="" class="btn add-to-basket">
-              <svg viewBox="0 0 27 24">
-                <path class="cls-2" d="M27,4.36l-2.12,9.75a1.12,1.12,0,0,1-1.1.89H9.11l.44,2.25H22.78a1.13,1.13,0,0,1,1.1,1.36l-.05.23A3,3,0,0,1,24.75,21a3,3,0,0,1-6,0h0a3.53,3.53,0,0,1,.4-1.5h-6.8a3.53,3.53,0,0,1,.4,1.5h0a3,3,0,1,1-5.16-2.08L4.32,2.25H.56A.56.56,0,0,1,0,1.69V.56A.56.56,0,0,1,.56,0H5.25a1.12,1.12,0,0,1,1.1.91L6.76,3H25.87A1.12,1.12,0,0,1,27,4.36Zm-2.49.89H7.2l1.47,7.5H22.85ZM8.62,21a1.13,1.13,0,1,0,1.13-1.12A1.13,1.13,0,0,0,8.62,21ZM12.75,8.62a.56.56,0,0,1,.56-.56h1.5V6.56A.56.56,0,0,1,15.38,6h.74a.56.56,0,0,1,.57.56v1.5h1.5a.56.56,0,0,1,.56.56v.76a.56.56,0,0,1-.56.56h-1.5v1.5a.56.56,0,0,1-.57.56h-.74a.56.56,0,0,1-.57-.56V9.94h-1.5a.56.56,0,0,1-.56-.56ZM20.62,21a1.13,1.13,0,1,0,1.13-1.12A1.13,1.13,0,0,0,20.62,21Z"/>
-              </svg>
-              Add to basket
+              <span>
+                <svg viewBox="0 0 27 24">
+                  <path class="cls-2" d="M27,4.36l-2.12,9.75a1.12,1.12,0,0,1-1.1.89H9.11l.44,2.25H22.78a1.13,1.13,0,0,1,1.1,1.36l-.05.23A3,3,0,0,1,24.75,21a3,3,0,0,1-6,0h0a3.53,3.53,0,0,1,.4-1.5h-6.8a3.53,3.53,0,0,1,.4,1.5h0a3,3,0,1,1-5.16-2.08L4.32,2.25H.56A.56.56,0,0,1,0,1.69V.56A.56.56,0,0,1,.56,0H5.25a1.12,1.12,0,0,1,1.1.91L6.76,3H25.87A1.12,1.12,0,0,1,27,4.36Zm-2.49.89H7.2l1.47,7.5H22.85ZM8.62,21a1.13,1.13,0,1,0,1.13-1.12A1.13,1.13,0,0,0,8.62,21ZM12.75,8.62a.56.56,0,0,1,.56-.56h1.5V6.56A.56.56,0,0,1,15.38,6h.74a.56.56,0,0,1,.57.56v1.5h1.5a.56.56,0,0,1,.56.56v.76a.56.56,0,0,1-.56.56h-1.5v1.5a.56.56,0,0,1-.57.56h-.74a.56.56,0,0,1-.57-.56V9.94h-1.5a.56.56,0,0,1-.56-.56ZM20.62,21a1.13,1.13,0,1,0,1.13-1.12A1.13,1.13,0,0,0,20.62,21Z"/>
+                </svg>
+                Add to basket
+              </span>
             </a>
-            <a href="" class="btn quick-buy">
-              <svg viewBox="0 0 19.5 24">
-                <path class="cls-2" d="M19.5,14.25A9.75,9.75,0,1,1,8.62,4.57V2.25H7.31a.56.56,0,0,1-.56-.56V.56A.56.56,0,0,1,7.31,0h4.88a.56.56,0,0,1,.56.56V1.69a.56.56,0,0,1-.56.56H10.88V4.56a9.69,9.69,0,0,1,5.33,2.38l1-1A.57.57,0,0,1,18,6l.79.8a.57.57,0,0,1,0,.8l-1.06,1A9.68,9.68,0,0,1,19.5,14.25Zm-2.25,0a7.5,7.5,0,1,0-7.5,7.5A7.5,7.5,0,0,0,17.25,14.25ZM9.19,16.5a.57.57,0,0,1-.57-.56V9.56A.57.57,0,0,1,9.19,9h1.12a.57.57,0,0,1,.57.56v6.38a.57.57,0,0,1-.57.56Z"/></svg>
-              Quick buy
+            <a href="" class="btn quick-buy light-blue">
+              <span>
+                <svg viewBox="0 0 19.5 24">
+                  <path class="cls-2" d="M19.5,14.25A9.75,9.75,0,1,1,8.62,4.57V2.25H7.31a.56.56,0,0,1-.56-.56V.56A.56.56,0,0,1,7.31,0h4.88a.56.56,0,0,1,.56.56V1.69a.56.56,0,0,1-.56.56H10.88V4.56a9.69,9.69,0,0,1,5.33,2.38l1-1A.57.57,0,0,1,18,6l.79.8a.57.57,0,0,1,0,.8l-1.06,1A9.68,9.68,0,0,1,19.5,14.25Zm-2.25,0a7.5,7.5,0,1,0-7.5,7.5A7.5,7.5,0,0,0,17.25,14.25ZM9.19,16.5a.57.57,0,0,1-.57-.56V9.56A.57.57,0,0,1,9.19,9h1.12a.57.57,0,0,1,.57.56v6.38a.57.57,0,0,1-.57.56Z"/></svg>
+                Quick buy
+              </span>
             </a>
           </div>
         </div>
@@ -173,7 +218,7 @@
             </svg>
           </span>
           <img class="trustpilot-logo" src="./src/images/trustpilot.svg" alt="Trustpilot Logo">
-          <a href="" class="btn">Find out more</a>
+          <a href="" class="btn"><span>Find out more</span></a>
         </div>
       </div>
     </div>
@@ -183,7 +228,7 @@
       <div class="col col-1">
         <p>Why not try something new?!</p>
         <h2>Get your hands on our latest and greatest</h2>
-        <a href="#" class="btn">View the range</a>
+        <a href="#" class="btn"><span>View the range</span></a>
       </div>
       <div class="col col-2">
         <div class="glide" id="product-carousel">
@@ -287,7 +332,7 @@
             <button class="glide__bullet" data-glide-dir="=2"></button>
           </div>
         </div>
-        <a href="#" class="btn">View the range</a>
+        <a href="#" class="btn"><span>View the range</span></a>
       </div>
     </div>
   </section>
